// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action cell component renders an action correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class"
  role="cell"
>
  <testAction
    key="0"
    rowData="test"
  />
</div>
`;

exports[`Action cell component renders no actions correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class"
  role="cell"
/>
`;
